[metadata]
name = numbakit-ode
version = 0.2.dev0
author = Hernan E. Grecco
author_email = hernan.grecco@gmail.com
license = BSD
description = ODE solvers usable f
long_description = file: README.rst
keywords = ODE, numba, science
url = https://github.com/hgrecco/numbakit-ode
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = nbkode
zip_safe = True
include_package_data = True
python_requires = >=3.7
install_requires =
    packaging
    importlib-metadata; python_version < '3.8'
    numba>=0.49
    numpy
    scipy
setup_requires =
    setuptools
    setuptools_scm
test_suite = nbkode.testsuite

test =
    pytest
    pytest-mpl
    pytest-cov
    pytest-subtests
    asv

[check-manifest]
ignore =
    .travis.yml

[bdist_wheel]
universal = 1

[build-system]
requires =
    setuptools
    setuptools_scm
    wheel


[flake8]
ignore=
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
per-file-ignores =
    # imported but unused
    __init__.py: F401
exclude=
    build
    .asv
    tmp

[isort]
default_section=THIRDPARTY
known_first_party=nbkode
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

